--- a/pom.xml
+++ b/pom.xml
@@ -28,14 +28,14 @@
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-api</artifactId>
             <version>1.12-SNAPSHOT</version>
-            <type>jar</type>
+            <instance>jar</instance>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-api</artifactId>
             <version>1.12-SNAPSHOT</version>
-            <type>javadoc</type>
+            <instance>javadoc</instance>
             <scope>provided</scope>
         </dependency>
         <dependency>
